[workspace]
members = [".", "integration"]

[package]
name = "k8s-gateway-api"
version = "0.7.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/linkerd/k8s-gateway-api"
rust-version = "1.60"
keywords = ["kubernetes", "gateway"]
description = "Rust bindings for the Kubenetes Gateway API"

[features]
default = []
experimental = []

[dependencies]
kube = { version = "0.76", default-features = false, features = ["derive"] }
k8s-openapi = { version = "0.16", features = ["schemars"] }
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies.k8s-openapi]
version = "0.16"
default-features = false
features = ["v1_21"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
features = ["experimental", "k8s-openapi/v1_25"]
