[package]
name = "k8s-gateway-api-tests"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
k8s-gateway-api = { path = "../k8s-gateway-api" }
kube = { version = "0.73", default-features = false, features = ["derive"] }
k8s-openapi = { version = "0.15", features = ["schemars"] }

[dev-dependencies]
k8s-openapi = { version = "0.15", default-features = false, features = ["v1_24"] }
tokio = { version = "1", features = ["macros", "rt"] }
tokio-test = "0.4"
tracing = "0.1"

[dev-dependencies.kube]
version = "0.73"
default-features = false
features = [
    "client",
    "openssl-tls",
    "runtime",
    "ws",
]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
features = [
    "k8s-openapi/v1_24",
]
